legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc540/save_st/pr35441.c-5.4.0-2.out.txt
pr35441.c: In function ‘foo1’:
pr35441.c:8:3: error: called object is not a function or function pointer
   (p - q)();    
   ^
pr35441.c: In function ‘foo2’:
pr35441.c:13:3: error: called object is not a function or function pointer
   (x/y)();    
   ^
pr35441.c: In function ‘foo3’:
pr35441.c:18:3: error: called object is not a function or function pointer
   (i << j | i >> (32 - j))();  
   ^
pr35441.c:19:3: error: called object is not a function or function pointer
   (i >> j | i << (32 - j))();  
   ^
pr35441.c: In function ‘foo4’:
pr35441.c:24:3: error: called object is not a function or function pointer
   (p < q ? p : q)();   
   ^
pr35441.c:25:3: error: called object is not a function or function pointer
   (p > q ? p : q)();   
   ^
